RP-46 Fixed Scrollbar bug

--- a/src/app/components/snomed-footer/snomed-footer.component.scss
+++ b/src/app/components/snomed-footer/snomed-footer.component.scss
@@ -7,7 +7,6 @@ footer.footer {
     height: 40px; /* Set the fixed height of the footer here */
     line-height: 40px; /* Vertically center the text there */
     background-color: #f5f5f5;
-    overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
 
